--- a/main-styles.css
+++ b/main-styles.css
@@ -24,9 +24,24 @@ body {
   margin: auto;
 }
 
+@media screen and (max-width: 870px) {
+  .navbar .navbar-nav {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .navbar .navbar-nav .nav-link {
   margin-right: 4rem;
   margin-left: 4rem;
+}
+
+@media screen and (max-width: 540px) {
+  .navbar .navbar-nav .nav-link {
+    font-size: 2rem;
+  }
 }
 
 .navbar .navbar-nav .nav-link {
@@ -70,6 +85,18 @@ header {
   padding: 90px 0 90px 0;
 }
 
+@media screen and (max-width: 540px) {
+  header {
+    padding: 60px 0 60px 0;
+  }
+}
+
+@media screen and (max-width: 359px) {
+  header {
+    padding: 30px 0 30px 0;
+  }
+}
+
 header .hero-container {
   margin: auto;
 }
@@ -80,6 +107,24 @@ header .hero-container h1 {
   font-weight: 100;
   text-align: center;
   color: #fff;
+}
+
+@media screen and (max-width: 870px) {
+  header .hero-container h1 {
+    font-size: 70px;
+  }
+}
+
+@media screen and (max-width: 359px) {
+  header .hero-container h1 {
+    font-size: 60px;
+  }
+}
+
+@media screen and (max-width: 359px) {
+  header .hero-container h1 {
+    font-size: 50px;
+  }
 }
 
 header .hero-container h1 span {
@@ -128,16 +173,48 @@ header .hero-container a {
   }
 }
 
+@media screen and (max-width: 540px) {
+  .overview {
+    padding: 60px 0 60px 0;
+  }
+}
+
+@media screen and (max-width: 359px) {
+  .overview {
+    padding: 30px 0 30px 0;
+  }
+}
+
 .overview .container {
   width: 575px;
   margin: auto;
   margin-bottom: 17rem;
 }
 
+@media screen and (max-width: 870px) {
+  .overview .container {
+    width: 500px;
+    margin-bottom: 7rem;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .overview .container {
+    width: 300px;
+    margin-bottom: 0;
+  }
+}
+
 .overview h2 {
   font-size: 62px;
   font-weight: normal;
   margin-bottom: 55px;
+}
+
+@media screen and (max-width: 540px) {
+  .overview h2 {
+    margin-bottom: 20px;
+  }
 }
 
 .overview h2 span {
@@ -148,6 +225,18 @@ header .hero-container a {
   font-size: 21px;
   font-weight: normal;
   line-height: 40px;
+}
+
+@media screen and (max-width: 870px) {
+  .overview p {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .overview p {
+    line-height: 30px;
+  }
 }
 
 .discount {
@@ -173,6 +262,12 @@ header .hero-container a {
   text-align: center;
   font-weight: 300;
   color: #fff;
+}
+
+@media screen and (max-width: 359px) {
+  .discount h2 {
+    font-size: 50px;
+  }
 }
 
 .discount h2 span {
@@ -204,16 +299,46 @@ header .hero-container a {
   padding: 90px 0 90px 0;
 }
 
+@media screen and (max-width: 540px) {
+  .details {
+    padding: 60px 0 60px 0;
+  }
+}
+
+@media screen and (max-width: 359px) {
+  .details {
+    padding: 30px 0 30px 0;
+  }
+}
+
 .details .container {
   font-family: 'Lato';
   width: 575px;
   margin: auto;
 }
 
+@media screen and (max-width: 870px) {
+  .details .container {
+    width: 380px;
+  }
+}
+
+@media screen and (max-width: 359px) {
+  .details .container {
+    width: 300px;
+  }
+}
+
 .details .container h2 {
   font-size: 62px;
   font-weight: normal;
   margin-bottom: 55px;
+}
+
+@media screen and (max-width: 540px) {
+  .details .container h2 {
+    margin-bottom: 15px;
+  }
 }
 
 .details .container h2 span {
@@ -224,6 +349,12 @@ header .hero-container a {
   font-size: 21px;
   font-weight: normal;
   line-height: 38px;
+}
+
+@media screen and (max-width: 540px) {
+  .details .container p {
+    line-height: 30px;
+  }
 }
 
 .details .car-details-cont {
@@ -241,13 +372,53 @@ header .hero-container a {
   padding-top: 10rem;
 }
 
+@media screen and (max-width: 540px) {
+  .details .car-details-cont {
+    padding-top: 6rem;
+  }
+}
+
 .details .car-details-cont img {
   position: relative;
+}
+
+@media screen and (max-width: 1100px) {
+  .details .car-details-cont img {
+    width: 80%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: auto;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .details .car-details-cont img {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .details .car-details-cont img {
+    width: 40%;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .details .car-details-cont img {
+    width: 30%;
+  }
 }
 
 .details .car-details-cont .w100 {
   width: 100%;
   margin-top: 10rem;
+}
+
+@media screen and (max-width: 540px) {
+  .details .car-details-cont .w100 {
+    margin-top: 6rem;
+  }
 }
 
 .details .car-details-cont .car-side-text {
@@ -260,6 +431,30 @@ header .hero-container a {
   height: 47px;
   border-bottom: 1px solid black;
   position: absolute;
+}
+
+@media screen and (max-width: 1100px) {
+  .details .car-details-cont .car-side-text .line {
+    width: 50px;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .details .car-details-cont .car-side-text .line {
+    width: 30px;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .details .car-details-cont .car-side-text .line {
+    width: 20px;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .details .car-details-cont .car-side-text .line {
+    width: 13px;
+  }
 }
 
 .details .car-details-cont .car-side-text .line img {
@@ -283,9 +478,72 @@ header .hero-container a {
   height: 70px;
 }
 
+@media screen and (max-width: 1100px) {
+  .details .car-details-cont .car-side-text .left-top {
+    right: 32rem;
+    bottom: 11rem;
+    height: 42px;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .details .car-details-cont .car-side-text .left-top {
+    height: 30px;
+    right: 28.5rem;
+    bottom: 8.5rem;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .details .car-details-cont .car-side-text .left-top {
+    height: 20px;
+    right: 25rem;
+    bottom: 5.5rem;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .details .car-details-cont .car-side-text .left-top {
+    height: 13px;
+    right: 310px;
+    bottom: 56px;
+  }
+}
+
 .details .car-details-cont .car-side-text .left-top img {
   right: 6rem;
   top: -7rem;
+}
+
+@media screen and (max-width: 1100px) {
+  .details .car-details-cont .car-side-text .left-top img {
+    right: 2rem;
+    top: -7rem;
+    width: 7rem;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .details .car-details-cont .car-side-text .left-top img {
+    right: 2rem;
+    top: -4.5rem;
+    width: 5rem;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .details .car-details-cont .car-side-text .left-top img {
+    right: 1.5rem;
+    top: -2.5rem;
+    width: 3rem;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .details .car-details-cont .car-side-text .left-top img {
+    right: 1rem;
+    top: -2rem;
+  }
 }
 
 .details .car-details-cont .car-side-text .left-bottom {
@@ -293,9 +551,68 @@ header .hero-container a {
   top: 15rem;
 }
 
+@media screen and (max-width: 1100px) {
+  .details .car-details-cont .car-side-text .left-bottom {
+    right: 32rem;
+    top: 14rem;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .details .car-details-cont .car-side-text .left-bottom {
+    right: 28.5rem;
+    top: 10rem;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .details .car-details-cont .car-side-text .left-bottom {
+    right: 25rem;
+    top: 6rem;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .details .car-details-cont .car-side-text .left-bottom {
+    right: 19.5rem;
+    top: 2.5rem;
+  }
+}
+
 .details .car-details-cont .car-side-text .left-bottom img {
   right: 6.5rem;
   top: -2.5rem;
+}
+
+@media screen and (max-width: 1100px) {
+  .details .car-details-cont .car-side-text .left-bottom img {
+    right: 3.5rem;
+    top: -1rem;
+    width: 7rem;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .details .car-details-cont .car-side-text .left-bottom img {
+    width: 5rem;
+    top: 0.5rem;
+    right: 2.5rem;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .details .car-details-cont .car-side-text .left-bottom img {
+    width: 3rem;
+    top: 1.1rem;
+    right: 1.7rem;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .details .car-details-cont .car-side-text .left-bottom img {
+    top: 1.5rem;
+    right: 1rem;
+  }
 }
 
 .details .car-details-cont .car-side-text .right-top {
@@ -303,9 +620,68 @@ header .hero-container a {
   bottom: 19rem;
 }
 
+@media screen and (max-width: 1100px) {
+  .details .car-details-cont .car-side-text .right-top {
+    left: 31.5rem;
+    bottom: 16rem;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .details .car-details-cont .car-side-text .right-top {
+    left: 28rem;
+    bottom: 12.5rem;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .details .car-details-cont .car-side-text .right-top {
+    left: 24.7rem;
+    bottom: 8rem;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .details .car-details-cont .car-side-text .right-top {
+    left: 19.2rem;
+    bottom: 5.2rem;
+  }
+}
+
 .details .car-details-cont .car-side-text .right-top img {
   left: 6.5rem;
   top: -2.5rem;
+}
+
+@media screen and (max-width: 1100px) {
+  .details .car-details-cont .car-side-text .right-top img {
+    left: 4rem;
+    top: -1rem;
+    width: 7rem;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .details .car-details-cont .car-side-text .right-top img {
+    width: 5rem;
+    left: 2.5rem;
+    top: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .details .car-details-cont .car-side-text .right-top img {
+    width: 3rem;
+    left: 1.8rem;
+    top: 1.4rem;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .details .car-details-cont .car-side-text .right-top img {
+    left: 1.2rem;
+    top: 1.4rem;
+  }
 }
 
 .details .car-details-cont .car-side-text .right-bottom {
@@ -313,9 +689,67 @@ header .hero-container a {
   top: 15rem;
 }
 
+@media screen and (max-width: 1100px) {
+  .details .car-details-cont .car-side-text .right-bottom {
+    left: 32rem;
+    top: 13rem;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .details .car-details-cont .car-side-text .right-bottom {
+    left: 28.5rem;
+    top: 9rem;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .details .car-details-cont .car-side-text .right-bottom {
+    left: 24.9rem;
+    top: 5rem;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .details .car-details-cont .car-side-text .right-bottom {
+    left: 19.4rem;
+    top: 2.1rem;
+  }
+}
+
 .details .car-details-cont .car-side-text .right-bottom img {
   left: 6.5rem;
   top: -2.5rem;
+}
+
+@media screen and (max-width: 1100px) {
+  .details .car-details-cont .car-side-text .right-bottom img {
+    top: -1rem;
+    left: 4rem;
+    width: 7rem;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .details .car-details-cont .car-side-text .right-bottom img {
+    top: 0.5rem;
+    left: 2.5rem;
+    width: 5rem;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .details .car-details-cont .car-side-text .right-bottom img {
+    top: 1.3rem;
+    left: 1.8rem;
+    width: 3rem;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .details .car-details-cont .car-side-text .right-bottom img {
+    left: 1.1rem;
+  }
 }
 
 .details .car-details-cont .car-side-text h3 {
@@ -329,8 +763,50 @@ header .hero-container a {
   color: #dddddd;
 }
 
+@media screen and (max-width: 1100px) {
+  .details .car-details-cont .car-side-text h3 {
+    font-size: 80px;
+    left: 8.5rem;
+    top: -4rem;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .details .car-details-cont .car-side-text h3 {
+    font-size: 62px;
+    left: 10.7rem;
+    top: -3rem;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .details .car-details-cont .car-side-text h3 {
+    font-size: 43px;
+    left: 12.7rem;
+    top: -2rem;
+  }
+}
+
 .details .car-details-cont .back h3 {
   left: 8rem;
+}
+
+@media screen and (max-width: 1100px) {
+  .details .car-details-cont .back h3 {
+    left: 10rem;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .details .car-details-cont .back h3 {
+    left: 11.5rem;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .details .car-details-cont .back h3 {
+    left: 13.4rem;
+  }
 }
 
 .details .car-details-cont .back .left {
@@ -338,9 +814,67 @@ header .hero-container a {
   top: 20rem;
 }
 
+@media screen and (max-width: 1100px) {
+  .details .car-details-cont .back .left {
+    left: 1rem;
+    top: 15.5rem;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .details .car-details-cont .back .left {
+    left: 5.5rem;
+    top: 11rem;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .details .car-details-cont .back .left {
+    left: 9.5rem;
+    top: 6.3rem;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .details .car-details-cont .back .left {
+    left: 9.6rem;
+    top: 2.9rem;
+  }
+}
+
 .details .car-details-cont .back .left img {
   left: -12rem;
   top: -2rem;
+}
+
+@media screen and (max-width: 1100px) {
+  .details .car-details-cont .back .left img {
+    width: 7rem;
+    left: -7.5rem;
+    top: -1rem;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .details .car-details-cont .back .left img {
+    width: 5rem;
+    left: -5.5rem;
+    top: 0rem;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .details .car-details-cont .back .left img {
+    width: 3rem;
+    left: -3.5rem;
+    top: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .details .car-details-cont .back .left img {
+    left: -3.3rem;
+  }
 }
 
 .details .car-details-cont .back .right {
@@ -348,9 +882,67 @@ header .hero-container a {
   top: 7.5rem;
 }
 
+@media screen and (max-width: 1100px) {
+  .details .car-details-cont .back .right {
+    right: 1rem;
+    top: 5.5rem;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .details .car-details-cont .back .right {
+    right: 5.7rem;
+    top: 3.5rem;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .details .car-details-cont .back .right {
+    right: 9.5rem;
+    top: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .details .car-details-cont .back .right {
+    right: 9.7rem;
+    top: -0.1rem;
+  }
+}
+
 .details .car-details-cont .back .right img {
   left: 6.5rem;
   bottom: -6rem;
+}
+
+@media screen and (max-width: 1100px) {
+  .details .car-details-cont .back .right img {
+    width: 7rem;
+    left: 4rem;
+    bottom: -3.5rem;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .details .car-details-cont .back .right img {
+    width: 5rem;
+    left: 2.5rem;
+    bottom: -2.5rem;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .details .car-details-cont .back .right img {
+    width: 3rem;
+    left: 1.8rem;
+    bottom: -1.5rem;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .details .car-details-cont .back .right img {
+    left: 1.2rem;
+  }
 }
 
 .details .car-details-cont .back .full-spec {
@@ -403,6 +995,18 @@ header .hero-container a {
   }
 }
 
+@media screen and (max-width: 540px) {
+  .price {
+    padding: 60px 0 60px 0;
+  }
+}
+
+@media screen and (max-width: 359px) {
+  .price {
+    padding: 30px 0 30px 0;
+  }
+}
+
 .price a {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -428,10 +1032,22 @@ header .hero-container a {
   width: 575px;
 }
 
+@media screen and (max-width: 870px) {
+  .price .container {
+    width: 320px;
+  }
+}
+
 .price .container h2 {
   font-size: 62px;
   font-weight: normal;
   margin-bottom: 100px;
+}
+
+@media screen and (max-width: 540px) {
+  .price .container h2 {
+    margin-bottom: 50px;
+  }
 }
 
 .price .container h2 span {
@@ -456,11 +1072,30 @@ header .hero-container a {
   text-align: center;
 }
 
+@media screen and (max-width: 870px) {
+  .price .container p {
+    font-size: 80px;
+  }
+}
+
 footer {
   font-family: 'Lato';
   padding: 90px 0 0 0;
   background-color: #000000;
   position: relative;
+  border-top: 2px solid gray;
+}
+
+@media screen and (max-width: 540px) {
+  footer {
+    padding: 60px 0 60px 0;
+  }
+}
+
+@media screen and (max-width: 359px) {
+  footer {
+    padding: 30px 0 30px 0;
+  }
 }
 
 footer .row {
@@ -474,9 +1109,41 @@ footer .row .col {
   text-decoration: none;
 }
 
+@media screen and (max-width: 540px) {
+  footer .row .col {
+    padding-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 359px) {
+  footer .row .col {
+    padding-bottom: 2px;
+  }
+}
+
+@media screen and (max-width: 359px) {
+  footer .row .col {
+    width: 50%;
+  }
+}
+
 footer .row .col h4 {
   margin-bottom: 30px;
   font-size: 30px;
+}
+
+@media screen and (max-width: 540px) {
+  footer .row .col h4 {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 359px) {
+  footer .row .col h4 {
+    font-size: 18px;
+    margin-bottom: 5px;
+  }
 }
 
 footer .row .col span {
@@ -491,6 +1158,18 @@ footer .row .col li a {
   display: inline-block;
   color: #fff;
   text-decoration: none;
+}
+
+@media screen and (max-width: 540px) {
+  footer .row .col li a {
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 359px) {
+  footer .row .col li a {
+    font-size: 12px;
+  }
 }
 
 footer .row .col li a::after {
@@ -510,6 +1189,12 @@ footer .row .col li a:hover::after {
 footer .row .copyright {
   width: 1170px;
   color: #b5b5b5;
+}
+
+@media screen and (max-width: 540px) {
+  footer .row .copyright {
+    width: 320px;
+  }
 }
 
 footer .row .copyright .row {
