--- a/Specifications/specifications.scss
+++ b/Specifications/specifications.scss
@@ -1,3 +1,11 @@
+$super-large: 1585px;
+$large: 1400px;
+$medium: 1100px;
+$small: 870px;
+$super-small: 630px;
+$mega-small: 540px;
+$hyper-small: 359px;
+
 .subpage-head {
 
     background-color: black;
@@ -5,14 +13,35 @@
     background-repeat: no-repeat;
     background-size: auto;
     background-position: center bottom;
+    .container{
+        h1{
+            @media screen and (max-width: $hyper-small){
+                font-size: 50px;
+            }
+    
+        }
+    }
 }
+
 .specs{
     background-image: url(/images/background_img_1.jpg);
     background-position: left -15% bottom;
     display: block;
+    @media screen and (max-width: $super-large){
+        background-position: left bottom;
+    }
+    
 .container{
     margin-bottom: 7rem;
-    
+    @media screen and (max-width: $mega-small){
+        margin-bottom: 4rem;
+    }
+    h2{
+        @media screen and (max-width: $hyper-small){
+            font-size: 50px;
+        }
+
+    }
 
 
 }
@@ -20,12 +49,28 @@
     font-family: 'Lato';
     width: 900px;
     margin: auto;
+    @media screen and (max-width: $medium){
+        width: 100%;
+    }
+    
+    .col-sm{
+        width: 33%;
+        @media screen and (max-width: $mega-small){
+            width: 90%;
+            text-align: center;
+        }
+    }
     h4{
         font-size: 21px;
         font-weight: bold;
+        
+           
+    
+    
     }
     p{
         font-size: 16px;
+       
     }
 
 }
@@ -34,10 +79,20 @@
     background-image: url(/images/background_img_2.jpg), url(/Gallery/images/Image3.jpg);
     background-position: right bottom, left top;
     display: block;
+    min-height: 0;
+    @media screen and (max-width: $super-large){
+        background: none;
+    }
+
+   
+    
     ul{
         list-style: none;
         margin-bottom: 8rem;
         opacity: 1;
+        @media screen and (max-width: $mega-small){
+            margin-bottom: 3rem;
+        }
         span{
             color: #ea0d60;
         }
@@ -45,5 +100,8 @@
     h2{
         margin-bottom: 20px;
         opacity: 1;
+        @media screen and (max-width: $mega-small){
+            font-size: 35px;
+        }
     }
 }
