--- a/main-styles.scss
+++ b/main-styles.scss
@@ -927,19 +927,22 @@ footer {
         max-width: 1170px;
         margin: auto;
         color: #fff;
+       
 
         .col {
             padding-bottom: 90px;
-
+            @media screen and (max-width: $small){
+                width: 50%;
+            }
             @media screen and(max-width: $mega-small) {
                 padding-bottom: 30px;
+                
             }
             @media screen and(max-width: $hyper-small){
                 padding-bottom: 2px;
-            }
-            @media screen and(max-width: $hyper-small){
                 width: 50%;
             }
+           
 
             h4 {
                 margin-bottom: 30px;
