--- a/main-styles.scss
+++ b/main-styles.scss
@@ -23,7 +23,7 @@ body {
 
     .custom-toggler1 {
         .navbar-toggler-icon {
-            background-image: url(/images/toggler.png);
+            background-image: url(./images/toggler.png);
         }
     }
 
