--- a/Call/call.scss
+++ b/Call/call.scss
@@ -11,7 +11,7 @@ $hyper-small: 359px;
     max-height: 100vh;
     background-color: black;
     background-image: linear-gradient(rgba(0, 0, 0, 0.8),
-            rgba(0, 0, 0, 0.8)), url(../Gallery/images/background_header-gallery.jpg);
+            rgba(0, 0, 0, 0.8)), url(/Gallery/images/background_header-gallery.jpg);
     background-repeat: no-repeat;
     background-size: auto;
     background-position: right;
