--- a/main-styles.scss
+++ b/main-styles.scss
@@ -18,7 +18,7 @@ body {
 
 .navbar {
     font-family: 'Lato';
-    background: #000000;
+    background: #ffffff;
     padding-left: 50px;
 
     .custom-toggler1 {
