--- a/Call/call.css
+++ b/Call/call.css
@@ -2,8 +2,8 @@
   width: 100%;
   max-height: 100vh;
   background-color: black;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8))), url(/Gallery/images/background_header-gallery.jpg);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(/Gallery/images/background_header-gallery.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8))), url(../Gallery/images/background_header-gallery.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../Gallery/images/background_header-gallery.jpg);
   background-repeat: no-repeat;
   background-size: auto;
   background-position: right;
