--- a/Gallery/style.css
+++ b/Gallery/style.css
@@ -2,8 +2,8 @@
   width: 100%;
   max-height: 100vh;
   background-color: black;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(/Gallery/images/background_header-gallery.jpg);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/Gallery/images/background_header-gallery.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(../Gallery/images/background_header-gallery.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../Gallery/images/background_header-gallery.jpg);
   background-repeat: no-repeat;
   background-size: auto;
   background-position: right;
@@ -96,22 +96,22 @@
 }
 
 .images .container .row .a {
-  background-image: url(/Gallery/images/Image1.jpg);
+  background-image: url(../Gallery/images/Image1.jpg);
   z-index: 1;
 }
 
 .images .container .row .b {
-  background-image: url(/Gallery/images/Image2.jpg);
+  background-image: url(../Gallery/images/Image2.jpg);
   z-index: 1;
 }
 
 .images .container .row .c {
-  background-image: url(/Gallery/images/Image3.jpg);
+  background-image: url(../Gallery/images/Image3.jpg);
   z-index: 1;
 }
 
 .images .container .row .d {
-  background-image: url(/Gallery/images/Image4.jpg);
+  background-image: url(../Gallery/images/Image4.jpg);
   z-index: 1;
 }
 
@@ -124,7 +124,7 @@
   right: 0;
   max-width: 50%;
   height: 590px;
-  background-image: url(/Gallery/images/Image5.jpg);
+  background-image: url(../Gallery/images/Image5.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: left;
