--- a/Specifications/specifications.css
+++ b/Specifications/specifications.css
@@ -1,7 +1,7 @@
 .subpage-head {
   background-color: black;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(20%, rgba(0, 0, 0, 0.6)), to(black)), url(/Specifications/images/specifications_background.jpg);
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6) 20%, black), url(/Specifications/images/specifications_background.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(20%, rgba(0, 0, 0, 0.6)), to(black)), url(../Specifications/images/specifications_background.jpg);
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6) 20%, black), url(../Specifications/images/specifications_background.jpg);
   background-repeat: no-repeat;
   background-size: auto;
   background-position: center bottom;
@@ -14,9 +14,15 @@
 }
 
 .specs {
-  background-image: url(/images/background_img_1.jpg);
+  background-image: url(../images/background_img_1.jpg);
   background-position: left -15% bottom;
   display: block;
+}
+
+@media screen and (max-width: 1585px) {
+  .specs {
+    background: none;
+  }
 }
 
 @media screen and (max-width: 1585px) {
@@ -74,7 +80,7 @@
 }
 
 .engine {
-  background-image: url(/images/background_img_2.jpg), url(/Gallery/images/Image3.jpg);
+  background-image: url(../images/background_img_2.jpg), url(../Gallery/images/Image3.jpg);
   background-position: right bottom, left top;
   display: block;
   min-height: 0;
