--- a/main-styles.css
+++ b/main-styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 .navbar .custom-toggler1 .navbar-toggler-icon {
-  background-image: url(/images/toggler.png);
+  background-image: url(./images/toggler.png);
 }
 
 .navbar .navbar-nav {
@@ -164,12 +164,29 @@ header .hero-container a {
   background-size: inherit;
   background-repeat: no-repeat;
   background-position: left bottom, right bottom 1cm;
+  position: relative;
 }
 
 @media screen and (max-width: 1585px) {
-  .overview {
+  .overview::after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
     background-image: url(images/background_img_1.jpg);
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: left bottom;
+    opacity: 0.3;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .overview {
+    min-height: 0;
   }
 }
 
@@ -318,13 +335,13 @@ header .hero-container a {
 
 @media screen and (max-width: 870px) {
   .details .container {
-    width: 380px;
+    width: 80%;
   }
 }
 
 @media screen and (max-width: 359px) {
   .details .container {
-    width: 300px;
+    width: 80%;
   }
 }
 
