--- a/main-styles.scss
+++ b/main-styles.scss
@@ -18,7 +18,7 @@ body {
 
 .navbar {
     font-family: 'Lato';
-    background: #ffffff;
+    background: #000000;
     padding-left: 50px;
 
     .custom-toggler1 {
@@ -156,10 +156,27 @@ header {
     background-size: inherit;
     background-repeat: no-repeat;
     background-position: left bottom, right bottom 1cm;
+    position: relative;
 
     @media screen and (max-width: $super-large) {
-        background-image: url(images/background_img_1.jpg);
-        background-size: cover;
+
+        &::after{
+            content: '';
+            position: absolute;
+            z-index: -1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url(images/background_img_1.jpg);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: left bottom;
+            opacity: 0.3;
+        }
+    }
+    @media screen and (max-width: $small){
+        min-height: 0;
     }
 
     @media screen and(max-width: $mega-small) {
@@ -284,11 +301,11 @@ header {
         margin: auto;
 
         @media screen and(max-width: $small) {
-            width: 380px;
+            width: 80%
         }
 
         @media screen and(max-width: $hyper-small) {
-            width: 300px;
+            width: 80%;
         }
 
 
