--- a/Gallery/style.css
+++ b/Gallery/style.css
@@ -24,6 +24,12 @@
   line-height: 5rem;
 }
 
+@media screen and (max-width: 630px) {
+  .subpage-head .container h1 {
+    font-size: 50px;
+  }
+}
+
 .subpage-head .container h1 span {
   font-weight: 100;
 }
@@ -79,8 +85,15 @@
   position: relative;
 }
 
+@media screen and (max-width: 870px) {
+  .images .container {
+    width: 100%;
+  }
+}
+
 .images .container .row {
   position: relative;
+  padding: 20px;
 }
 
 .images .container .row .col-3 {
@@ -93,6 +106,24 @@
           box-shadow: inset 0 0 0 100vw rgba(0, 0, 0, 0.5);
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
+}
+
+@media screen and (max-width: 1200px) {
+  .images .container .row .col-3 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .images .container .row .col-3 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    max-width: 100%;
+  }
 }
 
 .images .container .row .a {
@@ -130,6 +161,16 @@
   background-position: left;
 }
 
+@media screen and (max-width: 1200px) {
+  .images .container .row .col-6 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    max-width: 100%;
+    position: relative;
+  }
+}
+
 .images .container .row .col-3:hover {
   -webkit-box-shadow: unset;
           box-shadow: unset;
@@ -142,10 +183,23 @@
   opacity: 1;
 }
 
+@media screen and (max-width: 630px) {
+  .images .container .row .col-3:hover {
+    -webkit-transform: scale(1.05);
+            transform: scale(1.05);
+  }
+}
+
 .images .text-images {
-  width: 575px;
+  width: 50%;
   margin: auto;
   color: black;
+}
+
+@media screen and (max-width: 1100px) {
+  .images .text-images {
+    width: 70%;
+  }
 }
 
 .images .text-images h3 {
