--- a/Gallery/style.scss
+++ b/Gallery/style.scss
@@ -27,10 +27,10 @@ $hyper-small: 359px;
         h1 {
             font-size: 84px;
             line-height: 5rem;
-        
-                @media screen and (max-width: $super-small){
-                    font-size: 50px;
-                }
+
+            @media screen and (max-width: $super-small) {
+                font-size: 50px;
+            }
 
             span {
                 font-weight: 100;
@@ -53,28 +53,29 @@ $hyper-small: 359px;
     display: flex;
     padding: 90px 0 90px 0;
     font-family: 'Lato';
+
     // .carousel-inner{
     //     overflow: unset;
     // }
-    .carousel-indicators{
+    .carousel-indicators {
         top: -6rem;
         z-index: 0;
-        
-        .active{
+
+        .active {
             color: #cb0a52;
         }
-        
-        li{
-            text-indent:0;
+
+        li {
+            text-indent: 0;
             width: 120px;
             height: 40px;
-            border:none;
+            border: none;
             color: black;
             font-size: 21px;
             text-align: center;
             opacity: 1;
-            span
-            {
+
+            span {
                 color: #cb0a52;
                 margin-left: 40px;
                 margin-right: 40px;
@@ -82,20 +83,22 @@ $hyper-small: 359px;
             }
         }
     }
-  
+
 
     .container {
         width: 1300px;
         margin: auto;
         position: relative;
+
         @media screen and (max-width: $small) {
             width: 100%;
-            
+
         }
 
         .row {
             position: relative;
             padding: 20px;
+
             .col-3 {
                 width: 295px;
                 height: 295px;
@@ -104,13 +107,15 @@ $hyper-small: 359px;
                 background-position: right;
                 box-shadow: inset 0 0 0 100vw rgba(0, 0, 0, 0.5);
                 transition: all 0.5s;
-                @media screen and (max-width: 1200px){
+
+                @media screen and (max-width: 1200px) {
                     flex: 0 0 50%;
                     max-width: 50%;
                 }
-                @media screen and (max-width: $super-small){
+
+                @media screen and (max-width: $super-small) {
                     flex: 0 0 100%;
-    max-width: 100%;
+                    max-width: 100%;
                 }
 
 
@@ -135,7 +140,8 @@ $hyper-small: 359px;
                 background-image: url(../Gallery/images/Image4.jpg);
                 z-index: 1;
             }
-            .col-6{
+
+            .col-6 {
                 flex: 0 0 50%;
                 position: absolute;
                 right: right;
@@ -146,10 +152,17 @@ $hyper-small: 359px;
                 background-size: cover;
                 background-repeat: no-repeat;
                 background-position: left;
-                @media screen and (max-width: 1200px){
+
+                @media screen and (max-width: 1200px) {
                     flex: 0 0 100%;
                     max-width: 100%;
                     position: relative;
+                }
+
+                a {
+                    position: absolute;
+                    left: 40%;
+                    top: 40%;
                 }
             }
 
@@ -160,7 +173,8 @@ $hyper-small: 359px;
                 z-index: 15;
                 background-position: center;
                 opacity: 1;
-                @media screen and (max-width: $super-small){
+
+                @media screen and (max-width: $super-small) {
                     transform: scale(1.05);
                 }
             }
@@ -172,7 +186,8 @@ $hyper-small: 359px;
         width: 50%;
         margin: auto;
         color: black;
-        @media screen and (max-width: $medium){
+
+        @media screen and (max-width: $medium) {
             width: 70%;
         }
 
